[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["mag1cianag <mag1cian@icloud.com>"]
description = "simple kv store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false

[[bin]]
name = "kvs"
test = false


[dependencies]
clap = { version = "3.0.13", features = ["cargo"] }
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"